All worked after the new theme changes.

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -64,7 +64,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="{% url 'register' %}">Login</a>
+							<a class="colorlib-logo" href="{% url 'register' %}">Register</a>
 							
 						</div>
 						
