Some modification in the CSS of Login and Register on 13012022

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -99,11 +99,11 @@
 											</div>
 										</div>
 
-											<div class="col-md-12">
-												<div class="form-group">
-													<input type="submit" value="Register" class="btn btn-primary btn-submit">
-												</div>
+										<div class="col-md-12">
+											<div class="form-group">
+												<input type="submit" value="Login" class="btn btn-primary btn-submit">
 											</div>
+										</div>
 									</form>
 								</div>
 							</div>
