--- a/static/css/cssnew/css/stylereg.css
+++ b/static/css/cssnew/css/stylereg.css
@@ -17,13 +17,22 @@
 *	Edit this section
 *
 * ======================================================= */
-body {
+html, body {
 	font-family: 'HelveticaNeueLTPro', sans-serif;
   line-height: 1.8;
   font-size: 16px;
   font-weight: 400;
   background: #fff;
-  color: gray; }
+  color: gray; 
+  position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin:auto;  
+}
+
+
   body.menu-show {
     overflow: hidden;
     position: fixed;
@@ -66,7 +75,7 @@ span {
 h1, h2, h3, h4, h5, h6 {
   color: rgba(0, 0, 0, 0.8);
   font-family: "Playfair Display", Georgia, serif;
-  margin: 0 0 30px 0;
+  margin: 0 0px 0px 0;
   line-height: 1.3; }
 
 ::-webkit-selection {
@@ -317,7 +326,7 @@ header {
   header .colorlib-navbar-brand {
     float: right; }
     header .colorlib-navbar-brand .colorlib-logo {
-      margin-right: -500px;
+      margin-right: -350px;
       font-size: 24px;
       text-transform: uppercase;
       color: #000;
@@ -327,10 +336,16 @@ header {
       display: block;
       text-align: center; }
       header .colorlib-navbar-brand .colorlib-logo:hover {
-        text-decoration: none !important; }
+        text-decoration: none;
+        color: #F9CE00;
+        }
       header .colorlib-navbar-brand .colorlib-logo:active, header .colorlib-navbar-brand .colorlib-logo:focus {
         outline: none;
         text-decoration: none; }
+
+       
+
+
 
 #colorlib-services,
 #colorlib-contact,
@@ -552,15 +567,17 @@ header {
 
 .bold {
 	
-margin-top: 50px;
+
+margin-bottom: 100px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   font-family: 'HelveticaNeueLTPro', sans-serif;
-  font-size: 144px;
-  color: black;
+  font-size: 132px;
+  color: #F9CE00;
   font-weight: 700; }
+
   @media screen and (max-width: 768px) {
     .bold {
       font-size: 60px; } }
@@ -950,7 +967,7 @@ margin-top: 50px;
 .btn-submit {
   
 width: 100%;	
-margin-top: 100px;
+margin-top: 20px;
 margin-left: 160px;
   background: #000;
   border: 2px solid #000; }
@@ -1084,7 +1101,7 @@ margin-left: 160px;
 
 .form-control {
   
-	margin-top: 100px;
+	margin-top: 20px;
 	margin-left: 160px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -1110,13 +1127,18 @@ input[type="text"] {
   
   height: 50px; }
 
+  input[type="password"] {
+  
+  
+    height: 50px; }
+
   input[type="submit"] {
   
-    height: 100px; }
+    height: 96px; }
 
 .form-group {
-  margin-top: 10px;
-  margin-bottom: 10px; }
+  margin-top: 50px;
+  margin-bottom: 20px; }
 
 .colorlib-social-icons a:hover, .colorlib-social-icons a:focus {
   text-decoration: none !important; }
